slurm-293710.out
  File "/home/users/r/rasolof2/BCs_emmanuelrasolofo/BCs_EmmanuelRasolofo/utils.py", line 91
    model = custom_model.Custom_Classifier(llama_config, dinov2_name:str='facebook/dinov2-small', additional_token=additional_tokens).to(device) #using small
                                                                    ^
SyntaxError: invalid syntax
srun: error: gpu002: task 0: Exited with exit code 1
